crates/tracexec-tui/src/snapshots/tracexec_tui__breakpoint_manager__tests__snapshot_breakpoint_entry_argv_regex.snap
---
source: crates/tracexec-tui/src/breakpoint_manager.rs
assertion_line: 383
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 70, height: 4 },
    content: [
        " Breakpoint #7  Type  Permanent  On  Syscall Enter   Active           ",
        " Condition  Argv Regex  curl.*google                                  ",
        "                                                                      ",
        "                                                                      ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Magenta, underline: Reset, modifier: BOLD,
        x: 15, y: 0, fg: Black, bg: LightYellow, underline: Reset, modifier: NONE,
        x: 21, y: 0, fg: Black, bg: LightCyan, underline: Reset, modifier: BOLD,
        x: 32, y: 0, fg: Black, bg: LightYellow, underline: Reset, modifier: NONE,
        x: 36, y: 0, fg: Black, bg: LightCyan, underline: Reset, modifier: BOLD,
        x: 51, y: 0, fg: Black, bg: LightGreen, underline: Reset, modifier: NONE,
        x: 61, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Black, bg: LightCyan, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Black, bg: LightGreen, underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
